k8s/overlays/k3s/resources/pgweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
spec:
  ports:
  - name: "ui"
    port: 8085
    targetPort: 8081
    nodePort: 30885
  selector:
    service: pgweb
  type: NodePort
